<resources>
    <string name="app_name" translatable="false">Alias</string>
    <string name="title_play" translatable="false">Play</string>
    <string name="title_start_screen" translatable="false">Start screen</string>
    <string name="title_groups" translatable="false">Groups</string>
    <string name="title_settings" translatable="false">Settings</string>
    <string name="title_win" translatable="false">Win</string>

    <!-- START SCREEN -->
    <string name="new_game">new game</string>
    <string name="tutorial">tutorial</string>

    <string name="english" translatable="false">english</string>
    <string name="armenian" translatable="false">հայերեն</string>
    <string name="russian" translatable="false">русский</string>

    <string-array name="languages_list">
        <item>@string/english</item>
        <item>@string/russian</item>
        <item>@string/armenian</item>
    </string-array>

    <!-- GROUPS SCREEN -->
    <string name="first_def_group_name">group 1</string>
    <string name="second_def_group_name">group 2</string>
    <string name="new_group">group name</string>
    <string name="start">start</string>
    <string name="confirm">confirm</string>

    <string name="score">scores</string>
    <string name="score_description">how much score is needed to win the game?</string>

    <string name="duration">duration</string>
    <string name="duration_description">one round duration</string>

    <string name="mode">mode</string>
    <string name="mode_description">select game mode</string>
    <string name="first_group_name">first group name</string>
    <string name="second_group_name">second group name</string>
    <string name="third_group_name">third group name</string>
    <string name="fourth_group_name">fourth group name</string>
    <string name="group_name_max_limit_desc">maximum length of group name is 18</string>
    <string name="group_name_min_limit_desc">required field</string>
    <string name="winner_reach_to"><![CDATA[you are reached <b><font color=\'#777777\'>%1$d</font></b> scores]]></string>
    <string name="congrats">congratulations!</string>
    <string name="other_groups_result">other groups results</string>
    <string name="play_again">play again</string>
    <string name="exit">exit</string>
    <string name="play">play</string>

</resources>