<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_start_screen">

    <fragment
        android:id="@+id/navigation_start_screen"
        android:name="com.example.pantanima.ui.fragments.StartScreenFragment"
        android:label="@string/title_start_screen"
        tools:layout="@layout/fragment_start_screen">

        <action
            android:id="@+id/navigateToGroups"
            app:destination="@id/navigation_groups" />
    </fragment>


    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.pantanima.ui.fragments.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" >

        <action
            android:id="@+id/navigateToPlay"
            app:destination="@id/navigation_play" />

    </fragment>


    <fragment
        android:id="@+id/navigation_play"
        android:name="com.example.pantanima.ui.fragments.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play">

        <argument
            android:name="mode"
            app:argType="com.example.pantanima.ui.enums.Mode" />

        <argument
            android:name="time"
            app:argType="integer"
            android:defaultValue="70" />
    </fragment>
</navigation>