<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pantanima.ui.viewmodels.SettingsVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray">

        <LinearLayout
            android:id="@+id/mode_description"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/start_screen_button"
            android:backgroundTint="@android:color/white"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/mode_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="center"
                android:text="@string/mode"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_title_tv_size" />

            <TextView
                android:id="@+id/mode_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/settings_description_tv_right_left_padding"
                android:paddingRight="@dimen/settings_description_tv_right_left_padding"
                android:text="@string/mode_description"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_description_tv_size" />

        </LinearLayout>

        <!--        DON'T SET PADDING-->
        <com.example.pantanima.ui.customviews.VerticalSliderView
            android:id="@+id/mode_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cursorChooserBtnSize="@dimen/vertical_slider_chooser_btn_size"
            app:cursorInitialPosition="@{viewModel.modeInitialPosition}"
            app:cursorPositionChangeListener="@{viewModel.modePositionChangeListener}"
            app:cursorVariantTvColor="@color/slider_tv_color"
            app:cursorVariantTvPadding="@dimen/vertical_slider_tv_padding"
            app:cursorVariantTvSize="@dimen/vertical_slider_tv_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mode_description"
            app:list="@{viewModel.modePikerData}" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/start_screen_button"
            android:backgroundTint="@android:color/white"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mode_slider">

            <TextView
                android:id="@+id/duration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_title_tv_size"
                tools:text="jnsn " />

            <TextView
                android:id="@+id/duration_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/settings_description_tv_right_left_padding"
                android:paddingRight="@dimen/settings_description_tv_right_left_padding"
                android:text="@string/duration_description"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_description_tv_size" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeHorizontalPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingLeft="@{viewModel.adapterStartEndPadding}"
            android:paddingRight="@{viewModel.adapterStartEndPadding}"
            app:adapter="@{viewModel.timeSliderAdapter}"
            app:initialPosition="@{viewModel.timeInitialPosition}"
            app:layoutManager="@{viewModel.timeLayoutManager}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayoutScores"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/start_screen_button"
            android:backgroundTint="@android:color/white"
            android:elevation="@dimen/_5sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeHorizontalPicker">

            <TextView
                android:id="@+id/score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_title_tv_size" />

            <TextView
                android:id="@+id/score_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/settings_description_tv_right_left_padding"
                android:paddingRight="@dimen/settings_description_tv_right_left_padding"
                android:text="@string/score_description"
                android:textColor="@color/text_color_dark_gray"
                android:textSize="@dimen/settings_description_tv_size" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scoreHorizontalPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingLeft="@{viewModel.adapterStartEndPadding}"
            android:paddingRight="@{viewModel.adapterStartEndPadding}"
            app:adapter="@{viewModel.scoreSliderAdapter}"
            app:initialPosition="@{viewModel.scoreInitialPosition}"
            app:layoutManager="@{viewModel.scoreLayoutManager}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutScores" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/start_screen_button_height"
            android:background="@drawable/start_screen_button"
            android:backgroundTint="@color/app_style_green"
            android:fontFamily="@font/caviar_dreams_bold"
            android:onClick="@{(view) -> viewModel.onConfirmClick()}"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/start_screen_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreHorizontalPicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>