<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pantanima.ui.viewmodels.GroupsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/group_row_start_end_margin"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginEnd="@dimen/group_row_start_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/groups_screen_left_icon_size"
                android:layout_height="@dimen/groups_screen_et_height"
                android:layout_marginEnd="@dimen/groups_screen_left_icon_margin"
                android:src="@drawable/ic_group" />

            <EditText
                android:id="@+id/group_name_1"
                android:layout_width="@dimen/groups_screen_et_width"
                android:layout_height="@dimen/groups_screen_et_height"
                android:backgroundTint="@color/gray_inactive"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/first_def_group_name"
                android:textAlignment="textStart"
                android:textChangeObserver="@{viewModel.group1}"
                android:textColor="@color/app_style_blue"
                android:textSize="@dimen/groups_screen_et_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/group_row_start_end_margin"
            android:layout_marginTop="@dimen/group_rows_between_margin"
            android:layout_marginEnd="@dimen/group_row_start_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_1">

            <ImageView
                android:layout_width="@dimen/groups_screen_left_icon_size"
                android:layout_height="@dimen/groups_screen_et_height"
                android:layout_marginEnd="@dimen/groups_screen_left_icon_margin"
                android:src="@drawable/ic_group"
                android:tint="@color/app_style_red" />

            <EditText
                android:id="@+id/group_name_2"
                android:layout_width="@dimen/groups_screen_et_width"
                android:layout_height="@dimen/groups_screen_et_height"
                android:backgroundTint="@color/gray_inactive"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="start"
                android:inputType="text"
                android:text="@string/second_def_group_name"
                android:textAlignment="textStart"
                android:textChangeObserver="@{viewModel.group2}"
                android:textColor="@color/app_style_red"
                android:textSize="@dimen/groups_screen_et_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/group_row_start_end_margin"
            android:layout_marginTop="@dimen/group_rows_between_margin"
            android:layout_marginEnd="@dimen/group_row_start_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_2">

            <ImageView
                android:layout_width="@dimen/groups_screen_left_icon_size"
                android:layout_height="@dimen/groups_screen_et_height"
                android:layout_marginEnd="@dimen/groups_screen_left_icon_margin"
                android:src="@drawable/ic_group"
                android:tint="@{viewModel.group3.length() == 0 ? @color/gray_inactive : @color/app_style_green}" />

            <EditText
                android:id="@+id/group_name_3"
                android:layout_width="@dimen/groups_screen_et_width"
                android:layout_height="@dimen/groups_screen_et_height"
                android:backgroundTint="@color/gray_inactive"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="start"
                android:hint="@string/new_group"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textChangeObserver="@{viewModel.group3}"
                android:textColor="@color/app_style_green"
                android:textColorHint="@color/gray_inactive"
                android:textSize="@dimen/groups_screen_et_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/group_row_start_end_margin"
            android:layout_marginTop="@dimen/group_rows_between_margin"
            android:layout_marginEnd="@dimen/group_row_start_end_margin"
            android:visibility="@{viewModel.group3.length() > 0}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_3">

            <ImageView
                android:layout_width="@dimen/groups_screen_left_icon_size"
                android:layout_height="@dimen/groups_screen_et_height"
                android:layout_marginEnd="@dimen/groups_screen_left_icon_margin"
                android:src="@drawable/ic_group"
                android:tint="@{viewModel.group4.length() == 0 ? @color/gray_inactive : @color/app_style_orange}" />

            <EditText
                android:id="@+id/group_name_4"
                android:layout_width="@dimen/groups_screen_et_width"
                android:layout_height="@dimen/groups_screen_et_height"
                android:backgroundTint="@color/gray_inactive"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="start"
                android:hint="@string/new_group"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textChangeObserver="@{viewModel.group4}"
                android:textColor="@color/app_style_orange"
                android:textColorHint="@color/gray_inactive"
                android:textSize="@dimen/groups_screen_et_text_size" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal">

            <Button
                android:id="@+id/new_game"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/start_screen_button_height"
                android:background="@drawable/start_screen_button"
                android:backgroundTint="@color/app_style_green"
                android:fontFamily="@font/caviar_dreams_bold"
                android:onClick="@{(view) -> viewModel.goToPlay()}"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/start_screen_button_text_size"
                android:textStyle="bold" />

            <ImageView
                android:background="@drawable/start_round_button_bg"
                android:backgroundTint="@color/app_style_green"
                app:srcCompat="@drawable/ic_settings"
                android:padding="@dimen/_12sdp"
                android:layout_toEndOf="@+id/new_game"
                android:layout_width="@dimen/start_screen_button_height"
                android:layout_height="@dimen/start_screen_button_height"
                android:layout_marginStart="@dimen/_20sdp"
                tools:layout_editor_absoluteX="332dp"
                tools:layout_editor_absoluteY="520dp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>